@@ -1,3 +1,7 @@
+2011-10-16  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el (and): Set auto-complete for eshell.
+
 2011-10-12  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el ("sqlplus"): Use mouse-2 instead of c-mouse-1.
